--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1 {
+  padding: 12px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  width: 1250px;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: antiquewhite;
+}
+
+.navbar {
+  /* width: 100%; */
+  height: 30px;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #c5c5c5;
+}
+
+.navbar a {
+  font-size: 1rem;
+  text-decoration: none;
+  color: #242424;
+  padding-right: 10px ;
+}
+
+.section {
+  /* padding: 10px; */
+  width: 100%;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.container button {
+  background-color: #0072d5;
+  color: #f1f1f1;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 12px;
+  margin-bottom: 10px;
+}
+
+.container p {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #0072d5;
+  padding-bottom: 30px;
 }
